# sorted_interval_map

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile.in  README.md
bench_logs/: sim-research-bench_log_2024-12-14T07:11:00.txt
cmake/: conan.cmake  cpm.cmake  head.cmake  private.cmake  target.cmake  utils.cmake
sim/: CMakeLists.txt  SortedInterval.hpp  SortedIntervalMap.hpp  sorted_interval_map.hpp
sim/aux/: SortedIntervalImpl.hpp
sim/fixture/: CMakeLists.txt  SortedInterval.hpp
sim/research/: CMakeLists.txt  SortedInterval.hpp  SortedIntervalBench.cpp
sim/research/utils/: CMakeLists.txt  IterationRate.hpp  IterativeAverage.hpp  MxGuarded.hpp  Singleton.hpp  random.hpp
sim/research/utils/src/: san_report_breakpoints.cpp
sim/ut/: CMakeLists.txt  SortedInterval.cpp  SortedIntervalMap.cpp  smoke.cpp
sim/utils/: CMakeLists.txt  functional.hpp  numeric.hpp
